--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -237,10 +237,9 @@
 \label{sec:intro}
 \lipsum[1-3]\todo{Refine me}
 
-The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).
-<% } -%>
-Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
+The remainder of the paper starts with a presentation of related work (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:relatedwork}).
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:latexhints}).<% } -%>
+Finally, a conclusion is drawn and outlook on future work is made (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:outlook}).
 
 \section{Related Work}
 \label{sec:relatedwork}
