--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -63,14 +63,20 @@
 <%- include('microtype.preamble.de.tex', this); %>
 \usepackage{graphicx}
 
-<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
-
 <%- include('diagbox.preamble.en.tex', this); -%>
 
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 
+<% if (listings == 'listings') { -%>
 <%- include('listings.preamble.de.tex', this); %>
+<% } else { -%>
+<%- include('minted.preamble.en.tex', this); %>
+<% } -%>
+
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds')  { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
+
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
 <% if (documentclass == 'lncs')  { -%>
@@ -101,6 +107,7 @@
   step = 5 ]
 { encoding = {OT1,T1,TS1} }
 { }
+
 <% } -%>
 <% if (todo == 'pdfcomment') { -%>
 <%- include('pdfcomment.preamble.en.tex', this); %>
@@ -117,17 +124,18 @@
 <%- include('hyperref.preamble.de.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
 
-<% if (useExampleEnvironment) { -%>
-\usepackage{currfile}
-\usepackage{tcolorbox}
-\tcbuselibrary{listings}
-<% } -%>
+\usepackage{lipsum}
 <% if (examples) { -%>
 
 % For demonstration purposes only
 % These packages can be removed when all examples have been deleted
 \usepackage[math]{blindtext}
 \usepackage{mwe}
+<% if (useExampleEnvironment) { -%>
+\usepackage{currfile}
+\usepackage{tcolorbox}
+\tcbuselibrary{<%= listings %>}
+<% } -%>
 <% } -%>
 
 <%- include('powerset.preamble.en.tex', this); %>
@@ -217,9 +225,9 @@
 \label{sec:intro}
 \lipsum[1-3]\todo{Refine me}
 
-The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).<% } -%>
-Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
+The remainder of the paper starts with a presentation of related work (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:relatedwork}).
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:latexhints}).<% } -%>
+Finally, a conclusion is drawn and outlook on future work is made (<% if (cleveref) { %>\cref<% } else if (documentclass == 'lncs') { %>Sect.~<% } else { %>Section~<% } %>{sec:outlook}).
 
 \section{Related Work}
 \label{sec:relatedwork}
@@ -250,6 +258,7 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
   coltext=black!90,
   left=8mm,
   title=Zugehöriger \LaTeX{}-Quelltext aus \texttt{\currfilepath},
+<% if (listings == 'listings') { -%>
   listing options={%
     frame=none,
     language={[LaTeX]TeX},
@@ -265,6 +274,19 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
     numberstyle=\tiny,
     numbersep=8pt%
   }
+<% } else { -%>
+    minted language=TeX,
+    minted style=vs,
+    minted options={
+      fontsize=\footnotesize,
+      firstline=\the\LTGbeginlineexample,
+      lastline=\the\LTGendlineexample,
+      firstnumber=\the\LTGbeginlineexample,
+      breaklines,
+      linenos,
+      numbersep=8pt
+    }
+<% } -%>
 }
 }%
 <% } -%>
@@ -276,10 +298,14 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
 <% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.de.tex', this); %><% } -%>
-<%- include('cleveref.example.en.tex', this); %>
+<% if (cleveref) { %><%- include('cleveref.example.en.tex', this); %><% } -%>
 <%- include('figure.example.de.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
+<% if (listings == 'listings') { -%>
 <%- include('listings.example.de.tex', this); %>
+<% } else { -%>
+<%- include('minted.example.en.tex', this); %>
+<% } -%>
 <%- include('paralist.example.en.tex', this); %>
 <%- include('otherfeatures.example.en.tex', this); %>
 <% } -%>
@@ -305,7 +331,7 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 \begingroup
   \microtypecontext{expansion=sloppy}
   \small % ensure correct font size for the bibliography
-  \bibliography{bibliography}
+  \bibliography{<%= filenames.bib %>}
 \endgroup
 
 % Enfore empty line after bibliography
